# covid-rust-api

./: Cargo.toml
entity/: Cargo.toml
entity/src/: countries_regions.rs  days.rs  lib.rs  mod.rs  prelude.rs  provinces_states.rs  seaql_migrations.rs
migration/: Cargo.toml
migration/init/: 1.create_db.sql  2.create_user.sql
migration/src/: lib.rs  m20220323_201100_create_countries_regions_table.rs  m20220323_213600_create_provinces_states_table.rs  m20220323_214600_create_days_table.rs
